# if poetry update takes forever
# export PYTHON_KEYRING_BACKEND=keyring.backends.fail.Keyring

[tool.poetry]
name = "linkarchivetools"
version = "0.0.31"
description = "Link Archive Tools"
authors = ["Iwan Grozny <renegat@renegat0x0.ddns.net>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
sqlalchemy="*"
webtoolkit="^0.0.133"
sympy="1.13.2"

# Enable and crawlers as needed

# [Requests]
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
